--- a/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -119,7 +119,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Art
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -501,12 +501,243 @@ AudioComponent.Variable=True
 AudioComponent.Cooking=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
+REINST_2DSideScrollerCharacter_C_45.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_45.Sprite=True
+REINST_2DSideScrollerCharacter_C_45.Physics=True
+REINST_2DSideScrollerCharacter_C_45.Collision=True
+REINST_2DSideScrollerCharacter_C_45.Lighting=True
+REINST_2DSideScrollerCharacter_C_45.Tags=True
+REINST_2DSideScrollerCharacter_C_45.Activation=True
+REINST_2DSideScrollerCharacter_C_45.Cooking=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_45.RootMotion=True
+REINST_2DSideScrollerCharacter_C_45.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_45.NavMovement=True
+REINST_2DSideScrollerCharacter_C_45.Velocity=True
+REINST_2DSideScrollerCharacter_C_45.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_45.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_45.Shape=True
+REINST_2DSideScrollerCharacter_C_45.Navigation=True
+REINST_2DSideScrollerCharacter_C_59.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_59.Sprite=True
+REINST_2DSideScrollerCharacter_C_59.Camera=True
+REINST_2DSideScrollerCharacter_C_59.None=True
+REINST_2DSideScrollerCharacter_C_59.Physics=True
+REINST_2DSideScrollerCharacter_C_59.Collision=True
+REINST_2DSideScrollerCharacter_C_59.Lighting=True
+REINST_2DSideScrollerCharacter_C_59.Rendering=True
+REINST_2DSideScrollerCharacter_C_59.Tags=True
+REINST_2DSideScrollerCharacter_C_59.Activation=True
+REINST_2DSideScrollerCharacter_C_59.Cooking=True
+REINST_2DSideScrollerCharacter_C_59.Character=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_59.RootMotion=True
+REINST_2DSideScrollerCharacter_C_59.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_59.NavMovement=True
+REINST_2DSideScrollerCharacter_C_59.Velocity=True
+REINST_2DSideScrollerCharacter_C_59.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_59.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_59.Shape=True
+REINST_2DSideScrollerCharacter_C_59.Navigation=True
+REINST_2DSideScrollerCharacter_C_59.Pawn=True
+REINST_2DSideScrollerCharacter_C_59.Replication=True
+REINST_2DSideScrollerCharacter_C_59.Input=True
+REINST_2DSideScrollerCharacter_C_59.Actor=True
+REINST_2DSideScrollerCharacter_C_79.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_79.Sprite=True
+REINST_2DSideScrollerCharacter_C_79.Camera=True
+REINST_2DSideScrollerCharacter_C_79.None=True
+REINST_2DSideScrollerCharacter_C_79.Physics=True
+REINST_2DSideScrollerCharacter_C_79.Collision=True
+REINST_2DSideScrollerCharacter_C_79.Lighting=True
+REINST_2DSideScrollerCharacter_C_79.Rendering=True
+REINST_2DSideScrollerCharacter_C_79.Tags=True
+REINST_2DSideScrollerCharacter_C_79.Activation=True
+REINST_2DSideScrollerCharacter_C_79.Cooking=True
+REINST_2DSideScrollerCharacter_C_79.Character=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_79.RootMotion=True
+REINST_2DSideScrollerCharacter_C_79.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_79.NavMovement=True
+REINST_2DSideScrollerCharacter_C_79.Velocity=True
+REINST_2DSideScrollerCharacter_C_79.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_79.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_79.Shape=True
+REINST_2DSideScrollerCharacter_C_79.Navigation=True
+REINST_2DSideScrollerCharacter_C_79.Pawn=True
+REINST_2DSideScrollerCharacter_C_79.Replication=True
+REINST_2DSideScrollerCharacter_C_79.Input=True
+REINST_2DSideScrollerCharacter_C_79.Actor=True
+REINST_2DSideScrollerCharacter_C_79.Variable=True
+REINST_2DSideScrollerCharacter_C_79.Sockets=True
+REINST_2DSideScrollerCharacter_C_79.ComponentReplication=True
+REINST_2DSideScrollerCharacter_C_79.Events=True
+K2Node_GetInputAxisKeyValue.Input=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+REINST_2DSideScrollerCharacter_C_139.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_139.Sprite=True
+REINST_2DSideScrollerCharacter_C_139.Camera=True
+REINST_2DSideScrollerCharacter_C_139.None=True
+REINST_2DSideScrollerCharacter_C_139.Physics=True
+REINST_2DSideScrollerCharacter_C_139.Collision=True
+REINST_2DSideScrollerCharacter_C_139.Lighting=True
+REINST_2DSideScrollerCharacter_C_139.Rendering=True
+REINST_2DSideScrollerCharacter_C_139.Tags=True
+REINST_2DSideScrollerCharacter_C_139.Activation=True
+REINST_2DSideScrollerCharacter_C_139.Cooking=True
+REINST_2DSideScrollerCharacter_C_139.Character=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_139.RootMotion=True
+REINST_2DSideScrollerCharacter_C_139.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_139.NavMovement=True
+REINST_2DSideScrollerCharacter_C_139.Velocity=True
+REINST_2DSideScrollerCharacter_C_139.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_139.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_139.Shape=True
+REINST_2DSideScrollerCharacter_C_139.Navigation=True
+REINST_2DSideScrollerCharacter_C_139.Pawn=True
+REINST_2DSideScrollerCharacter_C_139.Replication=True
+REINST_2DSideScrollerCharacter_C_139.Input=True
+REINST_2DSideScrollerCharacter_C_139.Actor=True
+REINST_2DSideScrollerCharacter_C_173.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_173.Sprite=True
+REINST_2DSideScrollerCharacter_C_173.Camera=True
+REINST_2DSideScrollerCharacter_C_173.None=True
+REINST_2DSideScrollerCharacter_C_173.Physics=True
+REINST_2DSideScrollerCharacter_C_173.Collision=True
+REINST_2DSideScrollerCharacter_C_173.Lighting=True
+REINST_2DSideScrollerCharacter_C_173.Rendering=True
+REINST_2DSideScrollerCharacter_C_173.Tags=True
+REINST_2DSideScrollerCharacter_C_173.Activation=True
+REINST_2DSideScrollerCharacter_C_173.Cooking=True
+REINST_2DSideScrollerCharacter_C_173.Character=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_173.RootMotion=True
+REINST_2DSideScrollerCharacter_C_173.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_173.NavMovement=True
+REINST_2DSideScrollerCharacter_C_173.Velocity=True
+REINST_2DSideScrollerCharacter_C_173.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_173.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_173.Shape=True
+REINST_2DSideScrollerCharacter_C_173.Navigation=True
+REINST_2DSideScrollerCharacter_C_173.Pawn=True
+REINST_2DSideScrollerCharacter_C_173.Replication=True
+REINST_2DSideScrollerCharacter_C_173.Input=True
+REINST_2DSideScrollerCharacter_C_173.Actor=True
+REINST_2DSideScrollerCharacter_C_213.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_213.Sprite=True
+REINST_2DSideScrollerCharacter_C_213.Camera=True
+REINST_2DSideScrollerCharacter_C_213.None=True
+REINST_2DSideScrollerCharacter_C_213.Physics=True
+REINST_2DSideScrollerCharacter_C_213.Collision=True
+REINST_2DSideScrollerCharacter_C_213.Lighting=True
+REINST_2DSideScrollerCharacter_C_213.Rendering=True
+REINST_2DSideScrollerCharacter_C_213.Tags=True
+REINST_2DSideScrollerCharacter_C_213.Activation=True
+REINST_2DSideScrollerCharacter_C_213.Cooking=True
+REINST_2DSideScrollerCharacter_C_213.Character=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_213.RootMotion=True
+REINST_2DSideScrollerCharacter_C_213.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_213.NavMovement=True
+REINST_2DSideScrollerCharacter_C_213.Velocity=True
+REINST_2DSideScrollerCharacter_C_213.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_213.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_213.Shape=True
+REINST_2DSideScrollerCharacter_C_213.Navigation=True
+REINST_2DSideScrollerCharacter_C_213.Pawn=True
+REINST_2DSideScrollerCharacter_C_213.Replication=True
+REINST_2DSideScrollerCharacter_C_213.Input=True
+REINST_2DSideScrollerCharacter_C_213.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=-1998.000 Y=297.000
+ScreenPosition=X=-1326.000 Y=384.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1196,18 +1427,18 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
-MRUItem1=/Game/Art/Watermelon
-MRUItem2=/Game/Art/Rubbish3
-MRUItem3=/Game/Art/Rubbish2
-MRUItem4=/Game/Art/Rubbish1
-MRUItem5=/Game/Art/Banana
-MRUItem6=/Game/Art/All_Assets_Sprite_18
-MRUItem7=/Game/Art/All_Assets_Sprite_15
-MRUItem8=/Game/Art/All_Assets_Sprite_14
-MRUItem9=/Game/Art/All_Assets_Sprite_13
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/Target
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem0=/Game/Art/Watermelon
+MRUItem1=/Game/Art/Rubbish3
+MRUItem2=/Game/Art/Rubbish2
+MRUItem3=/Game/Art/Rubbish1
+MRUItem4=/Game/Art/Banana
+MRUItem5=/Game/Art/All_Assets_Sprite_18
+MRUItem6=/Game/Art/All_Assets_Sprite_15
+MRUItem7=/Game/Art/All_Assets_Sprite_14
+MRUItem8=/Game/Art/All_Assets_Sprite_13
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/Target
 MRUItem12=/Game/2DSideScrollerBP/Blueprints/Projectle
 MRUItem13=/Game/2DSideScrollerBP/Blueprints/Targetpopper
 
@@ -1230,12 +1461,13 @@ MRUItem13=/Game/2DSideScrollerBP/Blueprints/Targetpopper
 [DetailCustomWidgetExpansion]
 PaperSpriteActor=PaperSpriteActor.Collision.Collision,
 PaperSprite=PaperSprite.Collision.Collision,
+2DSideScrollerCharacter_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,
 
 [DetailCategoriesAdvanced]
 SphereComponent.Shape=True
 
 [DetailPropertyExpansion]
-PaperSprite="\"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices.Vertices[21]\" "
+PaperSprite=
 Object=
 
 
