--- a/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject12/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -119,7 +119,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Art
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -732,12 +732,69 @@ REINST_2DSideScrollerCharacter_C_213.Pawn=True
 REINST_2DSideScrollerCharacter_C_213.Replication=True
 REINST_2DSideScrollerCharacter_C_213.Input=True
 REINST_2DSideScrollerCharacter_C_213.Actor=True
+ScoreProjectile_C.Tick=True
+ScoreProjectile_C.Rendering=True
+ScoreProjectile_C.Replication=True
+ScoreProjectile_C.Input=True
+ScoreProjectile_C.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+K2Node_InputAction.Input=True
+2DSideScrollerCharacter_C.Mobile=True
+REINST_2DSideScrollerCharacter_C_99.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_99.Sprite=True
+REINST_2DSideScrollerCharacter_C_99.Camera=True
+REINST_2DSideScrollerCharacter_C_99.None=True
+REINST_2DSideScrollerCharacter_C_99.Physics=True
+REINST_2DSideScrollerCharacter_C_99.Collision=True
+REINST_2DSideScrollerCharacter_C_99.Lighting=True
+REINST_2DSideScrollerCharacter_C_99.Rendering=True
+REINST_2DSideScrollerCharacter_C_99.Tags=True
+REINST_2DSideScrollerCharacter_C_99.Activation=True
+REINST_2DSideScrollerCharacter_C_99.Cooking=True
+REINST_2DSideScrollerCharacter_C_99.Character=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_99.RootMotion=True
+REINST_2DSideScrollerCharacter_C_99.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_99.NavMovement=True
+REINST_2DSideScrollerCharacter_C_99.Velocity=True
+REINST_2DSideScrollerCharacter_C_99.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_99.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_99.Shape=True
+REINST_2DSideScrollerCharacter_C_99.Navigation=True
+REINST_2DSideScrollerCharacter_C_99.Pawn=True
+REINST_2DSideScrollerCharacter_C_99.Replication=True
+REINST_2DSideScrollerCharacter_C_99.Input=True
+REINST_2DSideScrollerCharacter_C_99.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=-1326.000 Y=384.000
+ScreenPosition=X=-1928.000 Y=180.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1427,20 +1484,21 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Art/Watermelon
-MRUItem1=/Game/Art/Rubbish3
-MRUItem2=/Game/Art/Rubbish2
-MRUItem3=/Game/Art/Rubbish1
-MRUItem4=/Game/Art/Banana
-MRUItem5=/Game/Art/All_Assets_Sprite_18
-MRUItem6=/Game/Art/All_Assets_Sprite_15
-MRUItem7=/Game/Art/All_Assets_Sprite_14
-MRUItem8=/Game/Art/All_Assets_Sprite_13
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Target
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/Projectle
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/Targetpopper
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/ScoreProjectile
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/Projectle
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/Art/Watermelon
+MRUItem4=/Game/Art/Rubbish3
+MRUItem5=/Game/Art/Rubbish2
+MRUItem6=/Game/Art/Rubbish1
+MRUItem7=/Game/Art/Banana
+MRUItem8=/Game/Art/All_Assets_Sprite_18
+MRUItem9=/Game/Art/All_Assets_Sprite_15
+MRUItem10=/Game/Art/All_Assets_Sprite_14
+MRUItem11=/Game/Art/All_Assets_Sprite_13
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/RubbishTarget
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/Target
+MRUItem14=/Game/2DSideScrollerBP/Blueprints/Targetpopper
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/RubbishTarget.RubbishTarget=1
@@ -1457,11 +1515,15 @@ MRUItem13=/Game/2DSideScrollerBP/Blueprints/Targetpopper
 /Game/Art/Banana.Banana=1
 /Game/Art/All_Assets_Sprite_18.All_Assets_Sprite_18=1
 /Game/Art/All_Assets_Sprite_13.All_Assets_Sprite_13=1
+/Game/2DSideScrollerBP/Blueprints/ScoreProjectile.ScoreProjectile=1
 
 [DetailCustomWidgetExpansion]
 PaperSpriteActor=PaperSpriteActor.Collision.Collision,
 PaperSprite=PaperSprite.Collision.Collision,
 2DSideScrollerCharacter_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,
+StructProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,
+K2Node_VariableGet=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,
+K2Node_VariableSet=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,
 
 [DetailCategoriesAdvanced]
 SphereComponent.Shape=True
@@ -1469,5 +1531,8 @@ SphereComponent.Shape=True
 [DetailPropertyExpansion]
 PaperSprite=
 Object=
+
+[PluginBrowser]
+InstalledPlugins=Substance
 
 
